[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "know_your_ip"
version = "0.2.0"
description = "Get data on IP addresses"
readme = "README.rst"
license = "MIT"
authors = [
    {name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
keywords = ["ip", "geoip", "ipvoid", "abuseip", "shodan", "virustotal", "blacklisted", "geolocation", "cybersecurity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Utilities"
]
requires-python = ">=3.11"
dependencies = [
    "geoip2",
    "tzwhere",
    "BeautifulSoup4",
    "lxml",
    "shodan",
    "configparser",
    "numpy",
    "requests"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "build",
    "twine"
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock"
]
docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-copybutton",
    "myst-parser"
]

[project.urls]
Homepage = "https://github.com/themains/know-your-ip"
Repository = "https://github.com/themains/know-your-ip"
Documentation = "https://themains.github.io/know-your-ip/"
"Bug Tracker" = "https://github.com/themains/know-your-ip/issues"

[project.scripts]
know_your_ip = "know_your_ip.know_your_ip:main"

[tool.setuptools]
packages = ["know_your_ip"]

[tool.setuptools.package-data]
know_your_ip = [
    "abuseipdb_cat_catid.csv",
    "columns.txt",
    "know_your_ip.cfg"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "geoip2.*",
    "shodan.*",
    "tzwhere.*",
    "bs4.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]